# libgnn

./: CMakeLists.txt
include/: gnn.h
src/: gnn.cpp
src/backend/: gnn_mnn.cpp
src/core/: gnn_core.h  gnn_log.h
